<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_aboutnspsi"
            android:icon="@drawable/ic_about"
            android:title="@string/message_updates" />
        <item
            android:id="@+id/nav_registry"
            android:icon="@drawable/ic_add_std"
            android:title="@string/refer_a_student" />
        <item
            android:id="@+id/nav_my_list"
            android:icon="@drawable/ic_list"
            android:title="@string/my_list" />
        <item
            android:id="@+id/nav_sbox"
            android:icon="@drawable/ic_report_black_24dp"
            android:title="@string/suggestion_box" />

        <item
            android:id="@+id/nav_myprofile"
            android:icon="@drawable/ic_report_black_24dp"
            android:title="@string/my_profile" />
        <item
        android:id="@+id/nav_aboutapp"
        android:icon="@drawable/ic_report_black_24dp"
        android:title="@string/about_this_app" />


    </group>

    <item android:title="@string/communicate">
        <menu>
            <item
                android:id="@+id/nav_share"
                android:icon="@drawable/ic_menu_share"
                android:title="@string/share_this_app" />
        </menu>
    </item>

</menu>
