<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".aboutapp_grag">

    <!-- TODO: Update blank fragment layout -->


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/h1_id"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:background="#FFC107"
                android:text="@string/h1"
                android:textColor="@color/common_google_signin_btn_text_dark_focused"
                android:textSize="18sp"
                android:textStyle="bold"
                tools:layout_editor_absoluteX="144dp"
                tools:layout_editor_absoluteY="31dp" />

            <TextView
                android:id="@+id/content1id"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:text="@string/content1"
                android:textAlignment="viewStart" />

            <TextView
                android:id="@+id/h2id"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:background="#FFC107"
                android:text="@string/h2"
                android:textColor="@color/common_google_signin_btn_text_dark_focused"
                android:textSize="18sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/content2id"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:text="@string/content2" />

            <TextView
                android:id="@+id/h3id"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:background="#FFC107"
                android:text="@string/h3"
                android:textColor="@color/common_google_signin_btn_text_dark_focused"
                android:textSize="18sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/content3id"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:text="@string/content3" />

            <TextView
                android:id="@+id/h4id"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:background="#FFC107"
                android:text="@string/h4"
                android:textColor="@color/common_google_signin_btn_text_dark_focused"
                android:textSize="16sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/content4id"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:text="@string/content4" />

            <TextView
                android:id="@+id/h5id"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:background="#FFC107"
                android:text="@string/h5"
                android:textColor="@color/common_google_signin_btn_text_dark_focused"
                android:textSize="16sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/content5id"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:text="@string/content5"
                android:textAlignment="viewStart" />

            <TextView
                android:id="@+id/h6id"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:background="#FFC107"
                android:text="@string/h6"
                android:textColor="@color/common_google_signin_btn_text_dark_focused"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/content6id"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:text="@string/content6" />

            <TextView
                android:id="@+id/h7id"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:background="#FFC107"
                android:text="@string/h7"
                android:textColor="@color/common_google_signin_btn_text_dark_focused"
                android:textSize="16sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/content7"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:text="@string/content7" />

            <TextView
                android:id="@+id/h8"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:background="#FFC107"
                android:text="@string/h8"
                android:textColor="@color/common_google_signin_btn_text_dark_focused"
                android:textSize="16sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/content8"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:text="@string/content8" />

            <TextView
                android:id="@+id/reachusid"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:background="#FFC107"
                android:text="@string/reachus"
                android:textAlignment="viewStart"
                android:textColor="@color/design_default_color_primary"
                android:textStyle="bold" />


        </LinearLayout>
    </ScrollView>


</androidx.constraintlayout.widget.ConstraintLayout>