<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/adduser_constraint_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFFFF"
    tools:context=".adduserActivity">

    <Button
        android:id="@+id/stdsignup"
        android:layout_width="247dp"
        android:layout_height="42dp"
        android:layout_marginTop="12dp"
        android:background="@drawable/custom_button"
        android:text="@string/sign_up"
        android:textAllCaps="false"
        android:textColor="@color/colorPrimary"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="@+id/progressBarsignup"
        app:layout_constraintHorizontal_bias="0.532"
        app:layout_constraintStart_toStartOf="@+id/progressBarsignup"
        app:layout_constraintTop_toBottomOf="@+id/progressBarsignup" />

    <EditText
        android:id="@+id/pwd"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:ems="10"
        android:gravity="start"
        android:inputType="textPassword"
        android:textColor="@color/common_google_signin_btn_text_dark_focused"
        android:textColorHint="@color/common_google_signin_btn_text_dark_focused"
        android:textSize="15sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.4"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/pwdlabely" />

    <TextView
        android:id="@+id/pwdlabely"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:text="@string/confirm_password"
        android:textColor="@color/common_google_signin_btn_text_dark_focused"
        android:textColorHint="#FFFFFF"
        android:textSize="12sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@+id/pwd2"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/pwd2"
        app:layout_constraintTop_toBottomOf="@+id/pwd2" />

    <EditText
        android:id="@+id/pwd2"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:ems="10"
        android:gravity="start"
        android:inputType="textPassword"
        android:textColor="@color/common_google_signin_btn_text_dark_focused"
        android:textSize="15sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.4"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/pwdlabelx" />

    <TextView
        android:id="@+id/pwdlabelx"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:text="@string/password"
        android:textColor="@color/common_google_signin_btn_text_dark_focused"
        android:textColorHint="#FFFFFF"
        android:textSize="12sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@+id/emailid"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/emailid"
        app:layout_constraintTop_toBottomOf="@+id/emailid" />

    <EditText
        android:id="@+id/emailid"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:ems="10"
        android:gravity="start"
        android:inputType="textEmailAddress"
        android:textAlignment="center"
        android:textColor="@color/common_google_signin_btn_text_dark_focused"
        android:textColorHint="@color/common_google_signin_btn_text_dark_focused"
        android:textSize="15sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.4"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/emaillabelname" />

    <TextView
        android:id="@+id/emaillabelname"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:text="@string/email_address_signup"
        android:textColor="@color/common_google_signin_btn_text_dark_focused"
        android:textColorHint="#FFFFFF"
        android:textSize="12sp"
        app:layout_constraintEnd_toEndOf="@+id/phoneid"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/phoneid"
        app:layout_constraintTop_toBottomOf="@+id/phoneid" />

    <EditText
        android:id="@+id/phoneid"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:ems="10"
        android:gravity="start"
        android:inputType="number"
        android:textAlignment="center"
        android:textColor="@color/common_google_signin_btn_text_dark_focused"
        android:textColorHint="@color/common_google_signin_btn_text_dark_focused"
        android:textSize="15sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.4"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/mobilelabel"
        tools:ignore="TextFields" />

    <TextView
        android:id="@+id/mobilelabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:text="@string/confirm_mobile_no"
        android:textColor="@color/common_google_signin_btn_text_dark_focused"
        android:textColorHint="#FFFFFF"
        android:textSize="12sp"
        app:layout_constraintEnd_toEndOf="@+id/phoneid2"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/phoneid2"
        app:layout_constraintTop_toBottomOf="@+id/phoneid2" />

    <EditText
        android:id="@+id/phoneid2"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:ems="10"
        android:gravity="start"
        android:inputType="number"
        android:textAlignment="center"
        android:textColor="@color/common_google_signin_btn_text_dark_focused"
        android:textColorHint="@color/common_google_signin_btn_text_dark_focused"
        android:textSize="15sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.4"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/mobilelabel2"
        tools:ignore="TextFields" />

    <TextView
        android:id="@+id/mobilelabel2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:text="@string/mobile_no"
        android:textColor="@color/common_google_signin_btn_text_dark_focused"
        android:textColorHint="#FFFFFF"
        android:textSize="12sp"
        app:layout_constraintEnd_toEndOf="@+id/nameid"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/nameid"
        app:layout_constraintTop_toBottomOf="@+id/nameid" />

    <EditText
        android:id="@+id/nameid"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:ems="10"
        android:gravity="start"
        android:inputType="textPersonName"
        android:textAlignment="center"
        android:textColor="@color/common_google_signin_btn_text_dark_focused"
        android:textColorHint="@color/common_google_signin_btn_text_dark_focused"
        android:textSize="15sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.4"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/namelabel" />

    <TextView
        android:id="@+id/namelabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:text="@string/full_names_here"
        android:textColor="@color/common_google_signin_btn_text_dark_focused"
        android:textSize="12sp"
        app:layout_constraintEnd_toEndOf="@+id/admnoid"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/admnoid"
        app:layout_constraintTop_toBottomOf="@+id/admnoid" />

    <EditText
        android:id="@+id/admnoid"
        android:layout_width="0dp"
        android:layout_height="39dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:ems="10"
        android:gravity="start"
        android:inputType="textPersonName"
        android:textAlignment="center"
        android:textColor="@color/common_google_signin_btn_text_dark_focused"
        android:textColorHint="@color/common_google_signin_btn_text_dark_focused"
        android:textSize="15sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/admlabel" />

    <TextView
        android:id="@+id/admlabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="8dp"
        android:layout_marginRight="10dp"
        android:text="Adm No/ Staff No /ID"
        android:textColor="@color/common_google_signin_btn_text_dark_focused"
        android:textSize="12sp"
        app:layout_constraintBottom_toTopOf="@+id/admnoid"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/usertypelabel" />

    <TextView
        android:id="@+id/usertypelabel"
        android:layout_width="wrap_content"
        android:layout_height="21dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="12dp"
        android:text="@string/usertype"
        android:textAllCaps="false"
        android:textColor="@color/common_google_signin_btn_text_dark_focused"
        android:textSize="12sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Spinner
        android:id="@+id/spinnerusers"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="12dp"
        android:popupBackground="@color/colorAccent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.919"
        app:layout_constraintStart_toEndOf="@+id/usertypelabel"
        app:layout_constraintTop_toTopOf="parent" />

    <ProgressBar
        android:id="@+id/progressBarsignup"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        app:layout_constraintEnd_toEndOf="@+id/pwd"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="@+id/pwd"
        app:layout_constraintTop_toBottomOf="@+id/pwd" />
</androidx.constraintlayout.widget.ConstraintLayout>